added procfile and requirements

--- a/dashboard/templates/homepage.html
+++ b/dashboard/templates/homepage.html
@@ -20,7 +20,7 @@
 
         <div class="card">
     {% load static %}
-    <img class="img-thumbnail" src="{% static './img/retail.jpg' %}">
+    <img class="img-thumbnail" src="../static/img/retail.jpg">
   <div class="card-body">
     <h5 class="card-title">Retail report</h5>
     <p class="card-text">Analyze your transactional data from MongoDB.</p>
@@ -33,7 +33,7 @@
     <div class="col">
 <div class="card">
     {% load static %}
-    <img class="img-thumbnail" src="{% static './img/marketing.jpg' %}">
+    <img class="img-thumbnail" src="../static/img/marketing.jpg">
   <div class="card-body">
     <h5 class="card-title">Marketing report</h5>
     <p class="card-text">Analyze your digital marketing data from MongoDB.</p>
