--- a/dashboard/templates/marketing_report.html
+++ b/dashboard/templates/marketing_report.html
@@ -156,6 +156,9 @@ var pivot_chart = new Flexmonster({
             "reportFilters": [
                 {
                     "uniqueName": "Country"
+                },
+                {
+                    "uniqueName":"Source"
                 }
             ],
             "rows": [{
