--- a/dashboard/templates/marketing_report.html
+++ b/dashboard/templates/marketing_report.html
@@ -7,13 +7,13 @@
     var pivot = new Flexmonster({
     container: "#pivot",
     componentFolder: "https://cdn.flexmonster.com/",
-    licenseKey: "Z7Q2-XC1A27-2W4725-09670M",
+    licenseKey: "Z7OR-XCH616-4N5U2I-6W0M6X",
     height: 600,
     toolbar: true,
     report: {
     "dataSource": {
         "type": "api",
-        "url": "https://monog-flex-connector.herokuapp.com/mongo",
+        "url": "https://flexmonster.herokuapp.com/mongo",
         "index": "marketing",
         "mapping": {
                 "Traffic": {
@@ -94,18 +94,18 @@
         ]
     },
 },
-licenseKey: "Z7ZP-XE2I72-682923-136R6E"
+licenseKey: "Z7OR-XCH616-4N5U2I-6W0M6X"
 });
 var pivot_chart = new Flexmonster({
     container: "#pivot_chart",
     componentFolder: "https://cdn.flexmonster.com/",
-    licenseKey: "Z7ZP-XE2I72-682923-136R6E",
+    licenseKey: "Z7OR-XCH616-4N5U2I-6W0M6X",
     height: 600,
     //toolbar: true,
     report: {
         "dataSource": {
             "type": "api",
-            "url": "https://monog-flex-connector.herokuapp.com/mongo",
+            "url": "https://flexmonster.herokuapp.com/mongo",
             "index": "marketing",
             "mapping": {
                 "Traffic": {
@@ -216,7 +216,7 @@ var pivot_chart = new Flexmonster({
             "currencySymbol": "$"
         }]
     },
-    licenseKey: "Z7ZP-XE2I72-682923-136R6E"
+    licenseKey: "Z7OR-XCH616-4N5U2I-6W0M6X"
 });
 </script>
 {% endblock %}
