--- a/dashboard/templates/retail_report.html
+++ b/dashboard/templates/retail_report.html
@@ -17,7 +17,7 @@ var pivot = new Flexmonster({
     report: {
         "dataSource": {
             "type": "api",
-            "url": "https://monog-flex-connector.herokuapp.com/mongo",
+            "url": "https://flexmonster.herokuapp.com/mongo",
             "index": "transactions",
             "mapping": {
                 "InvoiceNo": {
@@ -96,7 +96,7 @@ var pivot = new Flexmonster({
             }
         }],
     },
-    licenseKey: "Z7ZP-XE2I72-682923-136R6E"
+    licenseKey: "Z7OR-XCH616-4N5U2I-6W0M6X"
 });
 var pivot_charts = new Flexmonster({
     container: "#pivot_chart",
@@ -106,7 +106,7 @@ var pivot_charts = new Flexmonster({
     report: {
         "dataSource": {
             "type": "api",
-            "url": "https://monog-flex-connector.herokuapp.com/mongo",
+            "url": "https://flexmonster.herokuapp.com/mongo",
             "index": "transactions",
             "mapping": {
                 "InvoiceNo": {
@@ -199,7 +199,7 @@ var pivot_charts = new Flexmonster({
             }
         }]
     },
-    licenseKey: "Z7ZP-XE2I72-682923-136R6E"
+    licenseKey: "Z7OR-XCH616-4N5U2I-6W0M6X"
 });
 </script>
 {% endblock %}
